# E2C_test

./: README.md  math_operations.py  pyproject.toml  test_math_operations.py
.github/workflows/: cpu_tests.yaml  e2c.yml  gpu_tests.yaml  guide_notebooks_regression_ec2.yml  macos_tests.yaml  ubuntu_tests.yaml  ubuntu_tests_310.yaml  ubuntu_tests_311.yaml  ubuntu_tests_check.yaml
