[tool.poetry]
name = "e2c-test"
version = "0.1.0"
description = ""
authors = ["fabiocat93 <fabio-cat93@hotmail.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
