[tool.poetry]
name = "e2c-test"
version = "0.1.0"
description = ""
authors = ["fabiocat93 <fabio-cat93@hotmail.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
pytest-xdist = {version = "^3.6.1", extras = ["psutil"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
